--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<div class="col-4"><span class="image left"><img src="images/subject.png" alt="" /></span></div>
+							<div class="col-4"><span class="image left"><img src="images/Subject.png" alt="" /></span></div>
 							</a><br />
 							</a><br />
 							</a><br />
@@ -52,6 +52,7 @@
 
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
+						<h2>Projects</h2>
 						<section>
 							<a href="#" class="image"><img src="images/15puzz.png" alt="" data-position="center center" /></a>
 							<div class="content">
