--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
-						<h2>Projects</h2>
+<!-- 						<h2>Projects</h2> -->
 						<section>
 							<a href="#" class="image"><img src="images/15puzz.png" alt="" data-position="center center" /></a>
 							<div class="content">
