--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 									<ul style="margin-top: 0.5em; list-style-position: inside;">
 										<li>Involved in Software Development, Cyber-Security, and Project Management.</li>
 										<li>Utilized Burp Suite, Wireshark, Python, and JS scripts to uncover sensitive information and exploits in
-											web apps, improving code reviews and ensuring OWASP compliance.</li>
+											web apps, improving code reviews and ensuring OWASP and PCI compliance.</li>
 										<li>Conducted IT and network software analysis based on Gartner’s industry-standard charts, generating a
 											detailed report with valuable insights for management.</li>
 										<li>Designed project timelines using Microsoft Project and created network schemes with Visio,
