--- a/index.html
+++ b/index.html
@@ -128,10 +128,23 @@
 							<h2>Work Experience</h2>
 							<div class="features">
 								<section>
+									<img src="images/incedo.png" alt="Incedo Inc." class="icon" />
+									<h3>Associate Software Engineer</h3>
+									<p style="margin-bottom: 0;"><b>Incedo Inc.</b></p>
+									<p style="margin-bottom: 0;"><b>July 2023 - Present</b></p>
+									<ul style="margin-top: 0.5em; list-style-position: inside;">
+										<li>Developing a SaaS full stack web application for client business improvement, utilizing Java, Spring Boot, React.js, MySQL & AWS.</li>
+										<li>Designed & implemented multiple Restful APIs to enhance functionality & improve user experience.</li>
+										<li>Partnered with DevOps engineers to build & run automated testing for efficient software delivery & reliability.</li>
+										<li>Contributing a sprint average of 15 story points and providing on-call support for production issues.</li>
+									</ul>
+									
+								</section>
+								<section>
 									<img src="images/uic.png" alt="UIC" class="icon" />
 									<h3>Computer Science Teaching Assistant</h3>
 									<p style="margin-bottom: 0;"><b>University of Illinois at Chicago, College of Engineering</b></p>
-									<p style="margin-bottom: 0;"><b>Aug. 2021 - Present</b></p>
+									<p style="margin-bottom: 0;"><b>Aug. 2021 - May 2023</b></p>
 									<ul style="margin-top: 0.5em; list-style-position: inside;">
 										<li>Assisted teaching Programming Practicum, Computer Design and Embedded Systems courses.</li>
 										<li>Developed an application to automate student seating allocation to improve lab time efficiency.</li>
@@ -153,7 +166,7 @@
 								</section>
 								<section>
 									<img src="images/kpmg.jpeg" alt="KPMG" class="icon" />
-									<h3>IT Consultancy Intern</h3>
+									<h3>Intern in IT Advisory</h3>
 									<p style="margin-bottom: 0;"><b>KPMG, Kuwait</b></p>
 									<p style="margin-bottom: 0;"><b>Jan. 2021 - March 2021</b></p>
 									<ul style="margin-top: 0.5em; list-style-position: inside;">
