--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								industry as a full-time Software Engineer and create revolutionary solutions that make a difference. </a><br />
 								Let's connect and build the future together!</p>
 							<ul class="actions">
-								<li><a href="Curriculum_Vitae_Latex (1)-1 copy.pdf" class="button primary icon solid fa-download">Resume</a></li>
+								<li><a href="Anmol_2023.pdf" class="button primary icon solid fa-download">Resume</a></li>
 							</ul>
 						</div>
 					</section>
