--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3>Frameworks:</h3>
-									<p>Node.js, NetBeans, Maven, Arduino, Flutter, Django, React.js</p>
+									<p>Spring Boot, Node.js, NetBeans, Maven, Arduino, Flutter, Django, React.js</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-link"></span>
 									<h3>Database and Tools:</h3>
-									<p>SQL, Git, Jira, AWS, GCP, WireShark, Burp Suite, VMWare, MS Project, MS Visio</p>
+									<p>SQL, Git, Jira, AWS, GCP, Splunk, WireShark, Burp Suite, VMWare, MS Project, MS Visio</p>
 								</section>
 							</div>
 							<h2>Work Experience</h2>
