Update spelling and skills

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 								<section>
 									<span class="icon solid major fa-link"></span>
 									<h3>Database and Tools:</h3>
-									<p>SQL, Git, Jira, AWS, GCP, Splunk, WireShark, Burp Suite, VMWare, MS Project, MS Visio</p>
+									<p>SQL, Git, Jira, AWS, GCP, Splunk, Postman, WireShark, Burp Suite, VMWare, MS Project, MS Visio</p>
 								</section>
 							</div>
 							<h2>Work Experience</h2>
@@ -159,7 +159,7 @@
 									<p style="margin-bottom: 0;"><b>University of Illinois at Chicago, College of Liberal Arts and Sciences</b></p>
 									<p style="margin-bottom: 0;"><b>Aug. 2021 - Dec. 2021</b></p>
 									<ul style="margin-top: 0.5em; list-style-position: inside;">
-										<li>Assisted teaching Pre-calculus and Calclus courses.</li>
+										<li>Assisted teaching Pre-calculus and Calculus courses.</li>
 										<li>Held review sessions and assisted in discussion sections.</li>
 										<li>Tracked students progress and communicated with faculty to improve peer involvement.</li>
 									</ul>
