--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 							</a><br />
 							<h1>Anmol Vijay Bhatia</h1>
 							<p>Enthusiastic and highly motivated software engineer seeking impactful opportunities! </a><br />
-								Graduating in May 2023 with a strong foundation in cutting-edge technologies and a passion for innovation. </a><br />
-								I excel at problem-solving, teamwork, and contributing to high-impact projects. I'm now eager to join the tech </a><br />
-								industry as a full-time Software Engineer and create revolutionary solutions that make a difference. </a><br />
+								Graduated in May 2023 with a strong foundation in cutting-edge technologies and a passion for innovation. </a><br />
+								I excel at problem-solving, teamwork, and contributing to high-impact projects. I'm pursuing my dreams as a Software Engineer </a><br />
+								 and creating revolutionary solutions that make a difference. </a><br />
 								Let's connect and build the future together!</p>
 							<ul class="actions">
 								<li><a href="Anmol_2023.pdf" class="button primary icon solid fa-download">Resume</a></li>
