--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							</a><br />
 							</a><br />
 							<h1>Anmol Vijay Bhatia</h1>
-							<p>Enthusiastic and highly motivated software engineer seeking impactful opportunities! </a><br />
+							<p>Enthusiastic and highly motivated Software Engineer seeking impactful opportunities! </a><br />
 								Graduated in May 2023 with a strong foundation in cutting-edge technologies and a passion for innovation. </a><br />
 								I excel at problem-solving, teamwork, and contributing to high-impact projects. I'm pursuing my dreams as a Software Engineer </a><br />
 								 and creating revolutionary solutions that make a difference. </a><br />
